--- a/pom.xml
+++ b/pom.xml
@@ -87,8 +87,7 @@
 		<mobicents.cluster.version>1.12</mobicents.cluster.version>
 		<mobicents.balancer.version>1.5-SNAPSHOT</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>1.4.0-SNAPSHOT</mobicents.jain.sip.ha.version>
-		<mobicents.jain.sip.ext.version>1.1-SNAPSHOT</mobicents.jain.sip.ext.version>
-		<tomcat.version>6.0.33</tomcat.version>	
+		<mobicents.jain.sip.ext.version>1.1-SNAPSHOT</mobicents.jain.sip.ext.version>		
 	</properties>
 	
 	<dependencies>
@@ -98,15 +97,7 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
-		</dependency>
-
-		<!-- j2ee dependencies -->
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
-		</dependency>
+		</dependency>		
 	</dependencies>
 	<build>
 		<plugins>
@@ -211,18 +202,42 @@
 			<id>tomcat</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
-			</activation>			
+			</activation>
+			<properties>
+				<tomcat.version>6.0.33</tomcat.version>	
+			</properties>			
 			<modules>		
 				<module>sip-servlets-catalina</module>						
 				<module>sip-servlets-tomcat-jboss4</module>				
-			</modules>			
+			</modules>	
+			<dependencies>
+				<!-- j2ee dependencies -->
+				<dependency>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+					<version>2.5</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>		
 		</profile>
 		<profile>			
 			<id>jboss</id>
 			<modules>				
 				<module>sip-servlets-catalina</module>				
 				<module>sip-servlets-tomcat-jboss4</module>				
-			</modules>			
+			</modules>
+			<properties>
+				<tomcat.version>6.0.33</tomcat.version>	
+			</properties>	
+			<dependencies>
+				<!-- j2ee dependencies -->
+				<dependency>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+					<version>2.5</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>			
 		</profile>
 		<profile>			
 			<id>jboss-5</id>			
@@ -232,21 +247,57 @@
 				<module>sip-servlets-jboss5-deployer</module>					
 				<module>sip-servlets-jboss5-ha-server-cache</module>
 				<module>sip-servlets-jboss5</module>				
-			</modules>			
+			</modules>
+			<properties>
+				<tomcat.version>6.0.33</tomcat.version>	
+			</properties>	
+			<dependencies>
+				<!-- j2ee dependencies -->
+				<dependency>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+					<version>2.5</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>			
 		</profile>
 		<profile>			
 			<id>tomcat-distro</id>			
 			<modules>				
 				<module>sip-servlets-catalina</module>				
 				<module>sip-servlets-tomcat-jboss4</module>				
-			</modules>			
+			</modules>
+			<properties>
+				<tomcat.version>6.0.33</tomcat.version>	
+			</properties>	
+			<dependencies>
+				<!-- j2ee dependencies -->
+				<dependency>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+					<version>2.5</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>			
 		</profile>
 		<profile>			
 			<id>jboss-distro</id>
 			<modules>		
 				<module>sip-servlets-catalina</module>						
 				<module>sip-servlets-tomcat-jboss4</module>				
-			</modules>			
+			</modules>
+			<properties>
+				<tomcat.version>6.0.33</tomcat.version>	
+			</properties>	
+			<dependencies>
+				<!-- j2ee dependencies -->
+				<dependency>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+					<version>2.5</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>			
 		</profile>
 		<profile>			
 			<id>jboss-5-distro</id>			
@@ -256,7 +307,57 @@
 				<module>sip-servlets-jboss5-deployer</module>					
 				<module>sip-servlets-jboss5-ha-server-cache</module>
 				<module>sip-servlets-jboss5</module>				
-			</modules>			
+			</modules>
+			<properties>
+				<tomcat.version>6.0.33</tomcat.version>	
+			</properties>	
+			<dependencies>
+				<!-- j2ee dependencies -->
+				<dependency>
+					<groupId>javax.servlet</groupId>
+					<artifactId>servlet-api</artifactId>
+					<version>2.5</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>			
+		</profile>
+		<profile>			
+			<id>tomcat-7</id>			
+			<modules>
+				<module>sip-servlets-catalina-7</module>			
+				<module>tomcat-7</module>
+			</modules>
+			<properties>
+				<tomcat.version>7.0.14</tomcat.version>
+			</properties>	
+			<dependencies>
+				<!-- j2ee dependencies -->
+				<dependency>
+					<groupId>javax</groupId>
+					<artifactId>javaee-web-api</artifactId>
+					<version>6.0</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>	
+		</profile>
+		<profile>
+			<id>tomcat-7-distro</id>
+			<modules>
+				<module>sip-servlets-catalina-7</module>			
+				<module>tomcat-7</module>
+			</modules>
+			<properties>
+				<tomcat.version>7.0.14</tomcat.version>
+			</properties>	
+			<dependencies>
+				<!-- j2ee dependencies -->
+				<dependency>
+					<groupId>javax</groupId>
+					<artifactId>javaee-web-api</artifactId>
+					<version>6.0</version>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>	
 		</profile>
 		<profile>			
 			<id>docs</id>
