--- a/pom.xml
+++ b/pom.xml
@@ -383,6 +383,20 @@
 			</snapshots>
 		</repository>
 		<repository>
+			<id>jboss-public-repository-group</id>
+			<name>JBoss ThirdParty Releases Repository Group</name>
+			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
+			<layout>default</layout>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
+		</repository>
+		<repository>
 			<id>JbossRepository</id>
 			<name>Jboss Repository</name>
 			<url>http://repository.jboss.org/maven2</url>
