adding 3rd party repo for stun4j
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@20583 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -397,6 +397,20 @@
 			</snapshots>
 		</repository>
 		<repository>
+			<id>jboss-3rd-party-upload-repository-group</id>
+			<name>JBoss ThirdParty Upload Repository Group</name>
+			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-upload</url>
+			<layout>default</layout>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
+		</repository>
+		<repository>
 			<id>JbossRepository</id>
 			<name>Jboss Repository</name>
 			<url>http://repository.jboss.org/maven2</url>
