--- a/sip-servlets-jruby/pom.xml
+++ b/sip-servlets-jruby/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
@@ -13,42 +14,41 @@
 	<name>Sip Servlets JRuby Integration</name>
 	<url>http://www.mobicents.org/products_sip_servlets.html</url>
 	<properties>
-		<jboss.version>5.1.0.GA</jboss.version>	
+		<jboss.version>5.1.0.GA</jboss.version>
 	</properties>
-	<dependencies>		
+	<dependencies>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
 			<version>1.7.0-SNAPSHOT</version>
 			<scope>provided</scope>
-		</dependency>															
+		</dependency>
 	</dependencies>
-		
+
 	<build>
-		<plugins>		
+		<plugins>
 			<plugin>
 				<artifactId>maven-eclipse-plugin</artifactId>
-   				<groupId>org.mobicents.tools</groupId>
-    				<version>${mobicents.tools.mavenplugin.eclipse.version}</version>
+				<groupId>org.mobicents.tools</groupId>
+				<version>${mobicents.tools.mavenplugin.eclipse.version}</version>
 				<inherited>false</inherited>
 				<executions />
 				<configuration>
-					<!--classpathExcludes>
-					</classpathExcludes-->
-					<generateProjectsForModules>true</generateProjectsForModules>	
+					<!--classpathExcludes> </classpathExcludes -->
+					<generateProjectsForModules>true</generateProjectsForModules>
 					<resolveTransitiveDependencies>true</resolveTransitiveDependencies>
 					<eclipseProjectName>sip-servlets-jruby</eclipseProjectName>
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>			
-	<profiles>	
-		<profile>			
+	</build>
+	<profiles>
+		<profile>
 			<id>tomcat-distro</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
-			</activation>			
-			<build>			
+			</activation>
+			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -59,7 +59,9 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${CATALINA_HOME}/lib" />										
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${CATALINA_HOME}/lib" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -67,16 +69,16 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin>					
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
-		<profile>			
+		<profile>
 			<id>tomcat</id>
 			<activation>
 				<activeByDefault>true</activeByDefault>
-			</activation>			
-			<build>			
+			</activation>
+			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -87,7 +89,9 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.CATALINA_HOME}/lib" />										
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${env.CATALINA_HOME}/lib" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -95,13 +99,15 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin>					
+					</plugin>
 				</plugins>
 			</build>
-		</profile>		
-		<profile>		
-			<id>jboss</id>						
-			<build>			
+		</profile>
+
+		<profile>
+			<id>tomcat-7-distro</id>
+
+			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -112,7 +118,9 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer" />										
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${CATALINA_HOME}/lib" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -120,13 +128,13 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin>					
+					</plugin>
 				</plugins>
 			</build>
-		</profile>		
-		<profile>		
-			<id>jboss-distro</id>			
-			<build>			
+		</profile>
+		<profile>
+			<id>tomcat-7</id>
+			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -137,7 +145,9 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer" />										
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${env.CATALINA_HOME}/lib" />
 									</tasks>
 								</configuration>
 								<goals>
@@ -145,13 +155,14 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin>					
+					</plugin>
 				</plugins>
 			</build>
-		</profile>	
-		<profile>		
-			<id>jboss-5</id>			
-			<build>			
+		</profile>
+
+		<profile>
+			<id>jboss</id>
+			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -162,8 +173,66 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deployers/jbossweb.deployer/" />
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar" />
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${env.JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer" />
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>jboss-distro</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.1</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<configuration>
+									<tasks>
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer" />
+									</tasks>
+								</configuration>
+								<goals>
+									<goal>run</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>jboss-5</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.1</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<configuration>
+									<tasks>
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${env.JBOSS_HOME}/server/${node}/deployers/jbossweb.deployer/" />
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${env.JBOSS_HOME}/server/${node}/deploy/jbossweb.sar" />
 
 									</tasks>
 								</configuration>
@@ -175,10 +244,10 @@
 					</plugin>
 				</plugins>
 			</build>
-		</profile>				
-		<profile>		
-			<id>jboss-5-distro</id>			
-			<build>			
+		</profile>
+		<profile>
+			<id>jboss-5-distro</id>
+			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
@@ -189,8 +258,12 @@
 								<phase>package</phase>
 								<configuration>
 									<tasks>
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deployers/jbossweb.deployer/" />
-										<copy verbose="true" file="${project.build.directory}/${project.build.finalName}.${project.packaging}" todir="${JBOSS_HOME}/server/${node}/deploy/jbossweb.sar" />
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${JBOSS_HOME}/server/${node}/deployers/jbossweb.deployer/" />
+										<copy verbose="true"
+											file="${project.build.directory}/${project.build.finalName}.${project.packaging}"
+											todir="${JBOSS_HOME}/server/${node}/deploy/jbossweb.sar" />
 									</tasks>
 								</configuration>
 								<goals>
