adding nuxeo repo to fetch gwt-dnd dep
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@20611 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-management/pom.xml
+++ b/sip-servlets-management/pom.xml
@@ -65,6 +65,17 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+		<repository>
+			<id>nuxeo-repository</id>
+			<name>Nuxeo Repository</name>
+			<url>https://maven.nuxeo.org/nexus/content/groups/public</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</repository>
 	</repositories>
 
 	<!--  convenience to define GWT version in one place -->
