--- a/sip-servlets-management/pom.xml
+++ b/sip-servlets-management/pom.xml
@@ -162,7 +162,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>gwt-dnd</groupId>
+			<groupId>com.googlecode.gwt-dnd</groupId>
 			<artifactId>gwt-dnd</artifactId>
 			<version>2.0.7</version>
 			<scope>provided</scope>
