--- a/sip-servlets-management/pom.xml
+++ b/sip-servlets-management/pom.xml
@@ -73,7 +73,7 @@
 				<enabled>true</enabled>
 			</releases>
 			<snapshots>
-				<enabled>true</enabled>
+				<enabled>false</enabled>
 			</snapshots>
 		</repository>
 	</repositories>
