git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@20652 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-management/pom.xml
+++ b/sip-servlets-management/pom.xml
@@ -68,7 +68,7 @@
 		<repository>
 			<id>nuxeo-repository</id>
 			<name>Nuxeo Repository</name>
-			<url>https://maven.nuxeo.org/nexus/content/groups/public</url>
+			<url>http://maven.nuxeo.org/nexus/content/groups/public</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
