--- a/tomcat-7/pom.xml
+++ b/tomcat-7/pom.xml
@@ -75,6 +75,13 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>			
+			<groupId>org.mobicents.javax.sip</groupId>
+			<artifactId>mobicents-jain-sip-ext</artifactId>
+			<version>${mobicents.jain.sip.ext.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
