giving it more memory to avoid OOM on heap size on cloudbees
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@20886 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/testsuite/pom.xml
+++ b/sip-servlets-test-suite/testsuite/pom.xml
@@ -246,7 +246,7 @@
 					<excludes>
 						<exclude>**/TestSipListener.java</exclude>
 					</excludes>
-					<argLine>-Dorg.mobicents.testsuite.testhostaddr=${org.mobicents.testsuite.testhostaddr}</argLine>       				          				
+					<argLine>-Dorg.mobicents.testsuite.testhostaddr=${org.mobicents.testsuite.testhostaddr} -XX:MaxPermSize=256m -Xms1024m -Xmx1024m</argLine>       				          				
 				</configuration>
 			</plugin>
 		</plugins>
