Changing container build ordre to avoid spending too many cycles on cloudbees if tomact 7 fails to download
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@21436 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -70,7 +70,7 @@
 	
 	<!-- Release target -->
 	
-	<target name="release" depends="clean,release-jboss-5-jdk6,release-tomcat,release-tomcat7,make-src-zip" />
+	<target name="release" depends="clean,release-tomcat7,release-tomcat,release-jboss-5-jdk6,make-src-zip" />
 	
 	<!-- Tomcat version -->
 	
