git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@21437 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -416,7 +416,7 @@
 			<fileset dir="${docs.stage.dir}/sip-servlets/target/docbook/publish/en-US/" />
 		</copy--> 
 		<copy overwrite="true" todir="${mss.home}/docs/mobicents-sip-servlets">
-			<fileset dir="${base.path}/../../docs/jdocbook-mobicents/target/docbook/publish/en-US/" />
+			<fileset dir="${docs.stage.dir}/sip-servlets/jdocbook-mobicents/target/docbook/publish/en-US/" />
 		</copy>
 		
 		<!--delete dir="${docs.stage.dir}" /-->
