fixing missing jta deps located in java.net repo
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@21516 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -410,7 +410,15 @@
 				<updatePolicy>never</updatePolicy>
 			</snapshots>
 		</repository>
-		<repository>
+		<repositories>
+		    <repository>
+			<id>java.net-Public</id>
+			<name>Maven Java Net Snapshots and Releases</name>
+			<url>https://maven.java.net/content/groups/public/</url>
+			<updatePolicy>never</updatePolicy>
+		    </repository>
+		</repositories>
+		<!--repository>
 			<id>JbossRepository</id>
 			<name>Jboss Repository</name>
 			<url>http://repository.jboss.org/maven2</url>
@@ -442,6 +450,6 @@
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
-		</repository>
+		</repository-->
 	</repositories>
 </project>
