--- a/pom.xml
+++ b/pom.xml
@@ -414,7 +414,14 @@
 		<id>java.net-Public</id>
 		<name>Maven Java Net Snapshots and Releases</name>
 		<url>https://maven.java.net/content/groups/public/</url>
-		<updatePolicy>never</updatePolicy>
+		<releases>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
 	    </repository>
 		<!--repository>
 			<id>JbossRepository</id>
