fixing missing jta deps located in java.net repo
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@21520 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -413,7 +413,8 @@
 	    <repository>
 		<id>java.net-Public</id>
 		<name>Maven Java Net Snapshots and Releases</name>
-		<url>https://maven.java.net/content/groups/public/</url>
+		<!--url>https://maven.java.net/content/groups/public/</url-->
+		<url>http://download.java.net/maven/2/</url>
 		<releases>
 				<enabled>true</enabled>
 				<updatePolicy>never</updatePolicy>
