--- a/sip-servlets-test-suite/testsuite/src/test/resources/org/mobicents/servlet/sip/testsuite/callcontroller/call-forwarding-b2bua-servlet-dar.properties
+++ b/sip-servlets-test-suite/testsuite/src/test/resources/org/mobicents/servlet/sip/testsuite/callcontroller/call-forwarding-b2bua-servlet-dar.properties
@@ -1,1 +1,2 @@
 INVITE: ("org.mobicents.servlet.sip.testsuite.CallForwardingB2BUAApplication", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
+REGISTER: ("org.mobicents.servlet.sip.testsuite.CallForwardingB2BUAApplication", "DAR:From", "ORIGINATING", "", "NO_ROUTE", "0")
