git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@22036 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlet-arquillian-testsuite/pom.xml
+++ b/sip-servlet-arquillian-testsuite/pom.xml
@@ -207,7 +207,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.12</version>
 				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
+				<!--	<testFailureIgnore>true</testFailureIgnore>-->
 				</configuration>
 			</plugin>
 		</plugins>
