--- a/sip-servlet-arquillian-testsuite/arquillian-testsuite/pom.xml
+++ b/sip-servlet-arquillian-testsuite/arquillian-testsuite/pom.xml
@@ -3,15 +3,14 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.mobicents.servlet.sip</groupId>
+		<groupId>org.mobicents.servlet.sip.arquillian.testsuite</groupId>
 		<artifactId>sip-servlets-arquillian-testsuite</artifactId>
 		<version>1.7.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<groupId>org.mobicents.servlet.sip</groupId>
+	<groupId>org.mobicents.servlet.sip.arquillian.testsuite</groupId>
 	<artifactId>arquillian-testsuite</artifactId>
-	<version>1.7.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>arquillian-testsuite</name>
