--- a/sip-servlet-arquillian-testsuite/pom.xml
+++ b/sip-servlet-arquillian-testsuite/pom.xml
@@ -14,7 +14,7 @@
 		<relativePath />
 	</parent>
 
-	<groupId>org.mobicents.servlet.sip</groupId>
+	<groupId>org.mobicents.servlet.sip.arquillian.testsuite</groupId>
 	<artifactId>sip-servlets-arquillian-testsuite</artifactId>
 	<version>1.7.0-SNAPSHOT</version>
 	<name>sip-servlets-arquillian-testsuite</name>
@@ -30,9 +30,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- Versioning -->
-		<!-- <version.arquillian_core>1.0.0.CR7</version.arquillian_core> -->
-		<version.arquillian_core>1.0.0.Final-SNAPSHOT</version.arquillian_core>
+
+		<version.arquillian_core>1.0.0.CR7</version.arquillian_core>
+		<!-- <version.arquillian_core>1.0.0.Final-SNAPSHOT</version.arquillian_core> -->
 		<version.shrinkwrap_tomcat>1.0.0-beta-12</version.shrinkwrap_tomcat>
 
 		<version.jboss_spec>1.0.0.Final</version.jboss_spec>
