--- a/sip-servlet-arquillian-testsuite/simple/MultiHomeUACTest/pom.xml
+++ b/sip-servlet-arquillian-testsuite/simple/MultiHomeUACTest/pom.xml
@@ -1,25 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-<!-- 
-	<parent>
-		<groupId>org.jboss.arquillian.container</groupId>
-		<artifactId>arquillian-parent-mobicents-sip-servlets</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
- -->
  
  	<parent>
-		<groupId>org.mobicents.servlet.sip</groupId>
+		<groupId>org.mobicents.servlet.sip.arquillian.testsuite</groupId>
 		<artifactId>simple</artifactId>
 		<version>1.7.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<groupId>org.mobicents.servlet.sip.arq.testsuite</groupId>
+	<groupId>org.mobicents.servlet.sip.arquillian.testsuite</groupId>
 	<artifactId>MultiHomeUACTest</artifactId>
-	<version>1.7.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>MultiHomeUACTest</name>
