--- a/sip-servlet-arquillian-testsuite/simple/pom.xml
+++ b/sip-servlet-arquillian-testsuite/simple/pom.xml
@@ -4,13 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>org.mobicents.servlet.sip</groupId>
+		<groupId>org.mobicents.servlet.sip.arquillian.testsuite</groupId>
 		<artifactId>sip-servlets-arquillian-testsuite</artifactId>
 		<version>1.7.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<groupId>org.mobicents.servlet.sip</groupId>
+	<groupId>org.mobicents.servlet.sip.arquillian.testsuite</groupId>
 	<artifactId>simple</artifactId>
 	<version>1.7.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
