--- a/sip-servlets-test-suite/tck/jboss-5/excludeList.properties
+++ b/sip-servlets-test-suite/tck/jboss-5/excludeList.properties
@@ -103,3 +103,6 @@ exclude.method.41=com.bea.sipservlet.tck.agents.spec.ContextTest.testContext1
 # - expects sipFactor.createURI(String) to throw IllegalArgumentExcpetion while the javadoc says a parse exception.
 exclude.method.48=com.bea.sipservlet.tck.agents.spec.MultihomedTest.testMultihomedProxyForRegister
 # : the test check for Record Route in REGISTER, but Proxy can't add Record Route to REGISTER requests
+
+exclude.method.49=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.AddressTest.testSetDisplayName101
+exclude.method.50=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.AddressTest.testSetURI101
