--- a/sip-servlets-test-suite/tck/excludeList.properties
+++ b/sip-servlets-test-suite/tck/excludeList.properties
@@ -101,3 +101,6 @@ exclude.method.34=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.SipServlet
 # - expects sipFactor.createURI(String) to throw IllegalArgumentExcpetion while the javadoc says a parse exception.
 exclude.method.48=com.bea.sipservlet.tck.agents.spec.MultihomedTest.testMultihomedProxyForRegister
 # : the test check for Record Route in REGISTER, but Proxy can't add Record Route to REGISTER requests
+
+exclude.method.49=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.AddressTest.testSetDisplayName101
+exclude.method.50=com.bea.sipservlet.tck.agents.api.javax_servlet_sip.AddressTest.testSetURI101
