--- a/sip-servlets-as7-drop-in/jboss-as-mobicents/pom.xml
+++ b/sip-servlets-as7-drop-in/jboss-as-mobicents/pom.xml
@@ -66,8 +66,27 @@
             </plugin>
         </plugins>
     </build>
-
+<pluginRepositories>
+<pluginRepository>
+         <id>zanata-releases</id>
+         <name>zanata-releases</name>
+         <url>https://repository.jboss.org/nexus/content/repositories/flies-releases</url>
+         <releases>
+            <enabled>true</enabled>
+         </releases>
+         <snapshots>
+            <enabled>false</enabled>
+         </snapshots>
+      </pluginRepository>
+</pluginRepositories>
     <dependencies>
+
+<dependency>
+    <groupId>javax</groupId>
+    <artifactId>javaee-web-api</artifactId>
+    <version>6.0</version>
+    <scope>provided</scope>
+  </dependency>
 
         <dependency>
             <groupId>org.jboss.as</groupId>
