--- a/docs/pom.xml
+++ b/docs/pom.xml
@@ -53,17 +53,34 @@
                         <url>http://download.java.net/maven/2/</url>
                         <layout>default</layout>
                 </repository>
-                <repository>                    
-                        <id>JbossRepository</id>
-                        <name>Jboss Repository</name>
-                        <url>http://repository.jboss.org/maven2</url>
-                        <snapshots>
-                                <enabled>true</enabled>
-                        </snapshots>
-                        <releases>
-                                <enabled>true</enabled>
-                        </releases>
-                </repository>
+                <repository>
+			  <id>mobicents-public-repository-group</id>
+			  <name>Mobicens Public Maven Repository Group</name>
+			  <url>https://oss.sonatype.org/content/groups/public</url>
+			  <layout>default</layout>
+			  <releases>
+			    <enabled>true</enabled>
+			    <updatePolicy>never</updatePolicy>
+			  </releases>
+			  <snapshots>
+			    <enabled>true</enabled>
+			    <updatePolicy>never</updatePolicy>
+			  </snapshots>
+		</repository>
+		<repository>
+			<id>jboss-public-repository-group</id>
+			<name>JBoss Public Maven Repository Group</name>
+			<url>https://repository.jboss.org/nexus/content/groups/public/</url>
+			<layout>default</layout>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</snapshots>
+		</repository>
                 <repository>
             <id>backup.repository.jboss.org</id>
             <name>JBoss Repository Backup</name>
@@ -74,18 +91,7 @@
                         <releases>
                                 <enabled>true</enabled>
                         </releases>
-        </repository>
-                <repository>
-                        <id>jboss-snapshots</id>
-                        <name>JBoss Snapshot Repository</name>
-                        <url>http://snapshots.jboss.org/maven2</url>
-                        <releases>
-                                <enabled>false</enabled>
-                        </releases>
-                        <snapshots>
-                                <enabled>true</enabled>
-                        </snapshots>
-                </repository>
+        </repository>                
         </repositories>
 
 </project>
