--- a/containers/sip-servlets-catalina-7/.project
+++ b/containers/sip-servlets-catalina-7/.project
@@ -1,8 +1,12 @@
 <projectDescription>
-  <name>sip-servlets-catalina</name>
+  <name>sip-servlets-catalina-7</name>
   <comment>Mobicents :: Parent pom for 1.x releases. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects>
-    <project>sip-servlets-container-api</project>
+    <project>sip-servlets-annotations</project>
+    <project>sip-servlets-client</project>
+    <project>sip-servlets-core-api</project>
+    <project>sip-servlets-impl</project>
+    <project>sip-servlets-jruby</project>
     <project>sip-servlets-spec</project>
   </projects>
   <buildSpec>
