--- a/containers/sip-servlets-tomcat-jboss4/.project
+++ b/containers/sip-servlets-tomcat-jboss4/.project
@@ -1,12 +1,17 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>sip-servlets-tomcat-jboss-4.2.x</name>
-  <comment/>
-  <projects/>
+  <name>sip-servlets-tomcat-jboss4</name>
+  <comment>Mobicents :: Parent pom for 1.x releases. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
+  <projects>
+    <project>sip-servlets-annotations</project>
+    <project>sip-servlets-client</project>
+    <project>sip-servlets-core-api</project>
+    <project>sip-servlets-impl</project>
+    <project>sip-servlets-jruby</project>
+    <project>sip-servlets-spec</project>
+  </projects>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
-      <arguments/>
     </buildCommand>
   </buildSpec>
   <natures>
